--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,3 +2,5 @@
 
 I'm Marvin, a french software developer loving testing automation, [TypeScript](https://www.typescriptlang.org/) and [React](https://reactjs.org/).
 Currenty building [Gatsby Cloud](https://gatsbyjs.com/).
+
+Everything here is opinionated and based on my experience 😊.
