--- a/content/posts/why-i-dont-like-gitflow/index.mdx
+++ b/content/posts/why-i-dont-like-gitflow/index.mdx
@@ -22,7 +22,7 @@ When everything looks good, the `hotfix` branch is merged back to `develop` so t
 
 ![Graphical representation of the Gitflow](./gitflow.png)
 
-It likes a **5 tracks** race.
+It's like a **5 tracks** race.
 
 #### Why I don't like it?
 
@@ -125,7 +125,7 @@ Let's see how this solves the product folks problems:
 
 <br />
 
-#### How to get their?
+#### How to get there?
 
 The first thing is to automate the deployment process.
 
