--- a/content/posts/how-do-i-decide-ssr-strategy/index.mdx
+++ b/content/posts/how-do-i-decide-ssr-strategy/index.mdx
@@ -39,18 +39,34 @@ This way, when a user makes a request:
 This is the most basic idea behind the term SSR. Starting back from this, we can create really complex mechanisms.
 
 
-We can, for example, start a nodejs server that will render HTML content every time a request is made, and when the HTML is displayed to the user, it can start a JavaScript
-application for a high interactivity experience. This is what [Nextjs](https://nextjs.org/) does and this is the first way of SSR we've seen in the React ecosystem, we can call it _runtime SSR_.
+**Runtime SSR**
 
-We can also rely on SSR at build time (the moment you run `npm run build` or `yarn build` to generate your app). In that case, the idea is to generate as many filled HTML pages as needed (like real `.html` files). Once it's done, when a user makes a request, it directly access the pre-generated HTML content, which is super fast! This is how [Docusaurus](https://docusaurus.io/) works.
+- Start a nodejs server
+- When a request is made, render static HTML content (string format)
+- Start a client side application in the browser for interactivity
+- Used by [Nextjs](https://nextjs.org/)
+- First way of SSR we've seen in the React ecosystem
 
-If you combine the last point and tells the HTML pages to start lightweight JavaScript applications, you end up in a system that looks like [Gatsby](https://www.gatsbyjs.org/), without the plugins.
+**Static Generation**
 
-None of the previous solutions are mutually exclusive. It's up to you to rely on one or the others (maybe mixing them?) depending on your use case.
+- At build time (when running `npm run build` or `yarn build`)
+- Generate as many **HTML files (.html)** as necessary
+- When a request is made, render the associated .html file
+- Used by [Docusaurus](https://docusaurus.io/)
 
-And this is where it gets tricky and where the title of this post comes from.
+**Build time SSR / Pre-rendering**
 
-#### How do I decide which SSR strategy to adopt?
+- At build time (when running `npm run build` or `yarn build`)
+- Generate as many **HTML files (.html)** as necessary
+- When a request is made, render the associated .html file
+- Start a lightweight client side application in the browser for interactivity
+- Used by [Gatsby](https://www.gatsbyjs.org/)
+
+None of the previous solutions are mutually exclusive. It's up to you to pick one or to combine multiple for your project.
+
+And this is where it gets tricky.
+
+#### How to choose?
 
 The following diagram is one of the mental representations I'm using when I build a new application that potentially needs SSR. Weirdly, everything starts with: "Do we have public pages?"
 
