--- a/content/posts/how-do-i-decide-ssr-strategy/index.mdx
+++ b/content/posts/how-do-i-decide-ssr-strategy/index.mdx
@@ -34,7 +34,7 @@ The main idea behind SSR is to generate HTML content and make it available the s
 This way, when a user makes a request:
 
 - The browser makes a request on a specific URI
-- It downloads **an already filled HTML file** and can already display it to the user
+- It downloads **an already filled HTML content** and can already display it to the user
 
 This is the most basic idea behind the term SSR. Starting back from this, we can create really complex mechanisms.
 
@@ -62,7 +62,7 @@ This is the most basic idea behind the term SSR. Starting back from this, we can
 - Start a lightweight client side application in the browser for interactivity
 - Used by [Gatsby](https://www.gatsbyjs.org/)
 
-None of the previous solutions are mutually exclusive. It's up to you to pick one or to combine multiple for your project.
+Keep in mind that none of these technics are mutually exclusive. It's up to you to pick one or to combine multiple to create the best user experience.
 
 And this is where it gets tricky.
 
