--- a/content/posts/how-do-i-choose-a-ssr-strategy/index.mdx
+++ b/content/posts/how-do-i-choose-a-ssr-strategy/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "How do I decide which SSR strategy to adopt?"
+title: "How do I choose which SSR strategy to adopt?"
 date: 2020-05-20
-slug: "/how-do-i-decide-ssr-strategy"
+slug: "/how-do-i-choose-a-ssr-strategy"
 ---
 
 Server Side Rendering (or SSR) is a really big trend. In the React ecosystem, we have plenty of tools that rely on this like [Gatsbyjs](https://www.gatsbyjs.org/) or [Nextjs](https://nextjs.org/).
