--- a/content/posts/how-do-i-choose-a-ssr-strategy/index.mdx
+++ b/content/posts/how-do-i-choose-a-ssr-strategy/index.mdx
@@ -67,14 +67,14 @@ And this is where it gets tricky.
 
 #### How to choose?
 
-Stepping back from the last few years, I'm feeling that we tend to use Server Side Rendering almost everywhere and as much as we can.
+Stepping back from the last few years, I'm feeling that we tend to use SSR almost everywhere and as much as we can.
 While it's an amazing tool that helps in many situations, I think
-we should keep in mind that **it's just a tool** - not a miracle solution. If we don't face the problem it's supposed to solve, I'm not convinced we should introduce it in a project.
+we should keep in mind that **it's just a tool** - not a miracle solution. If we don't face the problems it's supposed to solve, I'm not convinced we should introduce it in a project.
 
-I'm personally in favor of Client Side Rendering since it's the reason why I embraced frontend development at first: create highly interactive user experiences in the browser.
+I'm personally in favor of CSR since it's the reason why I embraced frontend development at first: create highly interactive user experiences _in the browser_.
 
-But loving CSR doesn't mean I don't have to deal with SSR. The following diagram is one of my mental representation on when to use SSR and using which approach. It's, as this blog, highly opionated
-and reflects my mind:
+But loving CSR doesn't mean I don't have to deal with SSR. The following diagram is one of my mental representations on when I would introduce SSR and using which strategy.
+It's based on my mind and is opinionated, as all this blog:
 
 ![Mental SSR path to make a choice](./ssr.png)
 
