--- a/content/posts/how-do-i-choose-a-ssr-strategy/index.mdx
+++ b/content/posts/how-do-i-choose-a-ssr-strategy/index.mdx
@@ -4,26 +4,27 @@ date: 2020-05-20
 slug: "/how-do-i-choose-a-ssr-strategy"
 ---
 
-Server Side Rendering (or SSR) is a really big trend. In the React ecosystem, we have plenty of tools that rely on it such as [Gatsbyjs](https://www.gatsbyjs.org/) or [Nextjs](https://nextjs.org/).
+Server Side Rendering (or SSR) is a big trend. In the React ecosystem, we have plenty of tools that rely on it such as [Gatsbyjs](https://www.gatsbyjs.org/) or [Nextjs](https://nextjs.org/).
 
 Before getting further, let's see what happens when a user makes a request on a site that is not built using SSR:
 
 - The browser makes a request on a specific endpoint
-- It downloads an empty HTML file that only owns a bunch of `<script>` tags to load some JS code
-- It resolves / parses / compiles the JS code
-- It executes the JS code and only then the application can display the content
+- It downloads an empty HTML file that only owns a bunch of `<script>` tags to load some JavaScript code
+- It resolves / parses / compiles the JavaScript code
+- It executes the JavaScript code and only then the application can display the content
 
 This is how the good old [Angularjs](https://angularjs.org/) or [JQuery](https://jquery.com/) applications were working. And this is also what happens when we use [create-react-app](https://github.com/facebook/create-react-app).
 We say that these applications rely on "Client Side Rendering" (or CSR).
 
 #### Why SSR has been invented?
 
-When building an application using CSR, we **always** have to wait for the JS code to be resolved / parsed / compiled / executed **before** displaying anything on the screen.
+When building an application using CSR, we **always** have to wait for the JavaScript code to be resolved / parsed / compiled / executed **before** displaying anything on the screen.
+The JavaScript application is responsible for filling the HTML file dynamically in the browser.
 And this can be problematic because:
 
 - CSR applications are not optimized for SEO ([SEO works, but it's a bit more complicated](https://developers.google.com/web/updates/2019/02/rendering-on-the-web#seo))
 - We don't benefit from a good media sharing experience
-- It can take time to boot a big JS application in the browser
+- Displaying the first meaningful content or wait for the application to be interactive can take time
 
 _I remember having worked on an Angularjs application in 2013 where it took around 10 seconds to display the first content on the page._
 
@@ -36,7 +37,7 @@ This way, when a user navigates:
 - The browser makes a request on a specific endpoint
 - It downloads **an already filled HTML content** and can already display it to the user
 
-This is the most basic idea behind the term SSR. With this in mind, we can create really complex mechanisms.
+This is the most basic idea behind the term SSR. With this in mind, we can create complex and powerful mechanisms.
 
 
 **Runtime SSR**
@@ -67,12 +68,16 @@ And this is where it gets tricky.
 
 #### How to choose?
 
-Choosing a SSR strategy is not about finding the good solution. It's about evaluating trade offs and taking the
-technic that provides the most benefit in our context than it provides drawbacks.
+**Choosing a strategy is not about finding the best solution**. It's about evaluating trade offs and taking the
+technic that provides **the most benefit in our context** than it provides drawbacks.
 
 Also, I'm feeling that the last few years we tend to use SSR almost everywhere and as much as we can.
 While it's an amazing tool that helps in many situations, I think
-we should keep in mind that **it's just a tool** - not a miracle solution. If we don't face the problems it's supposed to solve, I'm not convinced we should introduce it in a project.
+we should keep in mind that **it's just a tool** - not a silver bullet solution. If we don't face the problems it's supposed to solve, I'm not convinced we should introduce it in a project.
+
+The following diagram is one of the mental representations I'm using to determine when I would consider using a technic over another one. It's not a source a truth at all. 
+
+Finally we don't have to choose a single way of building an app: we can cross the ideas and create a system that provides the best user experience in our scenario.
 
 
 ![Mental SSR path to make a choice](./ssr.png)
